package com.tetras;

public interface Voiture {

    public void accelerer();
    public void tourner();
    public void freiner();
    public String getcouleur();
}