package com.tetras;

public enum VoitureType {
    mercedes, ferrari, renault
}