package com.tetras;

public class ferrari implements Voiture{
    private String couleur;
      
    public ferrari(String color) {  
         this.couleur = color ;
    }

    public String getcouleur(){
        return couleur;
    }

    public void accelerer() {
    }

    public void tourner() {

    }

    public void freiner() {

    }
}