package com.tetras;

public class mercedes implements Voiture{
    private String couleur;
      
    public mercedes(String color) {  
         this.couleur = color ;
    }

    public String getcouleur(){
        return couleur;
    }

    public void accelerer() {
    }

    public void tourner() {

    }

    public void freiner() {

    }
}